Raft/build/all.log
Scanning dependencies of target server
[ 16%] Building CXX object CMakeFiles/server.dir/main.cpp.o
In file included from /home/cetc001/Raft/Raft/main.cpp:8:0:
/home/cetc001/Raft/Raft/server.hpp: In member function ‘void Service::LeaderPrepare()’:
/home/cetc001/Raft/Raft/server.hpp:303:24: error: ‘class external::External::Stub’ has no member named ‘TellLeader’
                 tmp -> TellLeader(&cont, Req, &Rep);
                        ^
In file included from /home/cetc001/Raft/Raft/main.cpp:9:0:
/home/cetc001/Raft/Raft/External.hpp: At global scope:
/home/cetc001/Raft/Raft/External.hpp:71:16: error: ‘grpc::Status ExternalImpl::TellLeader(grpc::ServerContext*, const external::GetRequest*, external::GetReply*)’ marked ‘override’, but does not override
         Status TellLeader(ServerContext* context, const GetRequest* request,
                ^
CMakeFiles/server.dir/build.make:62: recipe for target 'CMakeFiles/server.dir/main.cpp.o' failed
make[2]: *** [CMakeFiles/server.dir/main.cpp.o] Error 1
CMakeFiles/Makefile2:67: recipe for target 'CMakeFiles/server.dir/all' failed
make[1]: *** [CMakeFiles/server.dir/all] Error 2
Makefile:83: recipe for target 'all' failed
make: *** [all] Error 2
